# wills-columnar-format

./: .dir-locals.el  Cargo.toml  README.md  README.org  wills-columnar-format.org
src/: decode.rs  encode.rs  lib.rs  rle.rs  test_bincode.rs  test_lib.rs  test_rle.rs
