# [[file:wills-columnar-format.org::#IntroductionCargotoml-cqc696o03tj0][Cargo.toml:1]]
[package]
name = "columnar-format"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "2.0.0-rc.3"
itertools = "0.10"
# Cargo.toml:1 ends here
